--- a/public/css/style.css
+++ b/public/css/style.css
@@ -113,9 +113,10 @@ body{
 }
 
 /* show page */
-.show-img {
+/* .show-img {
    height: 30vh;
-}
+} */
+
 
 .btns{
    display: flex;
@@ -127,7 +128,29 @@ body{
 }
 
 /* Map */
-#map { 
-   height: 350px;
-   width: 93vh; 
+#map {
+    width: 100%;
+    height: 300px;
+    border-radius: 6px;
+    margin-bottom: 1.25rem;
+    border: 1px solid #e2e8f0;
+    max-width: 100%;
+}
+
+@media (max-width: 1024px) {
+    #map {
+        height: 250px;
+    }
+}
+
+@media (max-width: 768px) {
+    #map {
+        height: 200px;
+    }
+}
+
+@media (max-width: 480px) {
+    #map {
+        height: 180px;
+    }
 }
