--- a/view/includes/navbar.ejs
+++ b/view/includes/navbar.ejs
@@ -1,52 +1,148 @@
 <style>
-  .search-btn{
+  .navbar {
+    padding: 0.5rem 1rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+  }
+  
+  .navbar-brand {
+    font-size: 1.5rem;
+    color: #fe424d;
+    margin-right: 1rem;
+  }
+  
+  .nav-link {
+    font-size: 0.9rem;
+    padding: 0.5rem 1rem;
+    color: #333;
+    font-weight: 500;
+  }
+  
+  .nav-link:hover {
+    color: #fe424d;
+  }
+  
+  .search-btn {
     background-color: #fe424d;
     color: #fff;
     border-radius: 25px;
-    padding: 0 1rem 0 1rem;
+    padding: 0.5rem 1.5rem;
+    font-size: 0.9rem;
+    font-weight: 500;
+    white-space: nowrap;
+    transition: all 0.2s ease;
   }
-  .search-btn:hover{
-    background-color: #fe424d;
+  
+  .search-btn:hover {
+    background-color: #e03c46;
     color: #fff;
+    transform: translateY(-1px);
   }
+  
   .search-btn i {
     display: inline;
     margin-right: 0.5rem;
   }
-  .search-input{
+  
+  .search-inp {
     border-radius: 25px;
-    padding: 0.5rem 3rem 0.5rem 3rem;
+    padding: 0.5rem 1.5rem;
+    font-size: 0.9rem;
+    width: 200px;
+    transition: all 0.3s ease;
+  }
+  
+  .search-inp:focus {
+    width: 250px;
+    box-shadow: 0 0 0 0.2rem rgba(254, 66, 77, 0.25);
+  }
+  
+  /* Responsive adjustments */
+  @media (max-width: 1199.98px) {
+    .search-inp {
+      width: 180px;
+    }
+    .search-inp:focus {
+      width: 220px;
+    }
+  }
+  
+  @media (max-width: 991.98px) {
+    .navbar-collapse {
+      padding: 1rem 0;
+      margin-top: 0.5rem;
+      border-top: 1px solid #ddd;
+      background-color: #fff !important;
+      width: 100% !important;
+      .search-form-container{
+        display: none !important;
+      }
+    }
+    .search-form-container {
+      order: 3;
+      width: 100%;
+      margin-top: 1rem;
+    }
+    .search-inp {
+      width: 100%;
+    }
+    .search-inp:focus {
+      width: 100%;
+    }
+    .nav-links-container {
+      order: 2;
+    }
+    .container-fluid {
+    padding-left: 0;
+    padding-right: 0;
+    }
+    .navbar {
+      padding-left: 0.75rem;
+      padding-right: 0.75rem;
+    }
+  }
+
+  
+  @media (max-width: 767.98px) {
+    .navbar-brand {
+      font-size: 1.3rem;
+    }
+    .search-btn {
+      padding: 0.5rem 1rem;
+    }
   }
 </style>
-<nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
+
+<nav class="navbar navbar-expand-lg bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass"></i></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+    
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
+      <div class="navbar-nav nav-links-container">
         <a class="nav-link" href="/listings">Explore</a>
       </div>
-
-      <div class="navbar-nav ms-auto">
-        <form class="d-flex" role="search">
-          <input class="form-control me-2 search-input" type="search" placeholder="Search destination">
+      
+      <div class="d-flex align-items-center search-form-container ms-lg-auto me-lg-3">
+        <form class="d-flex align-items-center w-100" role="search">
+          <input class="form-control me-2 search-inp" type="search" placeholder="Search destinations" aria-label="Search">
           <button class="btn search-btn" type="submit">
-            <i class="fa-solid fa-magnifying-glass"></i>Search
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <span class="d-none d-sm-inline">Search</span>
           </button>
         </form>
       </div>
-
-      <div class="navbar-nav ms-auto">
-        <a class="nav-link" href="/listings/new">Add new wanderlust</a>
+      
+      <div class="navbar-nav ms-lg-3">
+        <a class="nav-link" href="/listings/new">Airbnb your home</a>
         <% if(!currUser){ %>
           <a class="nav-link" href="/signup"><b>Sign up</b></a>
           <a class="nav-link" href="/login"><b>Log in</b></a>
-          <% } %>
-            <% if(currUser){ %>
-              <a class="nav-link" href="/logout"><b>Log Out</b></a>
-              <% } %>
+        <% } %>
+        <% if(currUser){ %>
+          <a class="nav-link" href="/logout">Log out</a>
+        <% } %>
       </div>
     </div>
   </div>
