--- a/view/includes/navbar.ejs
+++ b/view/includes/navbar.ejs
@@ -119,12 +119,12 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNavAltMarkup">
       <div class="navbar-nav nav-links-container">
         <a class="nav-link" href="/listings">Explore</a>
       </div>
       
-      <div class="d-flex align-items-center search-form-container ms-lg-auto me-lg-3">
+      <!-- <div class="d-flex align-items-center search-form-container ms-lg-auto me-lg-3">
         <form class="d-flex align-items-center w-100" role="search">
           <input class="form-control me-2 search-inp" type="search" placeholder="Search destinations" aria-label="Search">
           <button class="btn search-btn" type="submit">
@@ -132,7 +132,7 @@
             <span class="d-none d-sm-inline">Search</span>
           </button>
         </form>
-      </div>
+      </div> -->
       
       <div class="navbar-nav ms-lg-3">
         <a class="nav-link" href="/listings/new">Airbnb your home</a>
