--- a/view/includes/navbar.ejs
+++ b/view/includes/navbar.ejs
@@ -113,16 +113,16 @@
 </style>
 
 <nav class="navbar navbar-expand-lg bg-body-light border-bottom sticky-top">
-  <div class="container-fluid">
+  <div class="container-fluid ">
     <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass"></i></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     
-    <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNavAltMarkup">
+    <div class="collapse navbar-collapse" style="margin-left: 65%" id="navbarNavAltMarkup">
       <div class="navbar-nav nav-links-container">
-        <a class="nav-link" href="/listings">Explore</a>
-      </div>
+        <!-- <a class="nav-link" href="/listings">Explore</a> -->
+      </div> 
       
       <!-- <div class="d-flex align-items-center search-form-container ms-lg-auto me-lg-3">
         <form class="d-flex align-items-center w-100" role="search">
@@ -134,7 +134,7 @@
         </form>
       </div> -->
       
-      <div class="navbar-nav ms-lg-3">
+      <div class="navbar-nav ms-lg-3 ms-8" >
         <a class="nav-link" href="/listings/new">Airbnb your home</a>
         <% if(!currUser){ %>
           <a class="nav-link" href="/signup"><b>Sign up</b></a>
